🐛 fixed issue showing the SideDrawer on Mobile

--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -1,8 +1,7 @@
 .NavigationItem {
-    margin: 10px 0;
     box-sizing: border-box;
     display: block;
-    height: 100%;
+    margin: 10px 0;
     width: 100%;
 }
 
